feat: Iniciando o html e css

--- a/index.html
+++ b/index.html
@@ -16,13 +16,65 @@
     </header>
 
     <main>
-        <section class="principal">
-            
+        <section class="circuito-1">
+            <br>
+            <h2 id="Circito1" class="titulo-circuitos">1º Circuito</h2>
+
+            <span class="transversal">Indique o valor do 1º resistor (Ω):</span>
+            <input id="resistencia" class="transversal" type="text">
+
+            <span class="transversal">Indique o valor do 2º resistor (Ω):</span>
+            <input id="resistencia" class="transversal" type="text">
+
+            <span class="transversal">Indique o valor do 3º resistor (Ω):</span>
+            <input id="resistencia" class="transversal" type="text">
+
+            <span class="transversal">Indique o valor do 4º resistor (Ω):</span>
+            <input id="resistencia" class="transversal" type="text">
+
+            <span class="transversal">Indique o valor do 5º resistor (Ω):</span>
+            <input id="resistencia" class="transversal" type="text">
+
+            <span class="transversal">Indique o valor do 6º resistor (Ω):</span>
+            <input id="resistencia" class="transversal" type="text">
+
+            <span class="transversal">Indique o valor do gerador (V):</span>
+            <input id="resistencia" class="transversal" type="text">
+
+            <span class="transversal">Indique o valor do receptor ():</span>
+            <input class="input__btn" id="area" type="text">
+
+            <button id="btnCalcula" class="btnCalcula" onclick="CalculaCircuito1();">CALCULAR</button>
+
+            <div class="principal__content-result">
+                <span id="respostaTensao" class="principal__valor-tensao">
+            </div>
+        </section>
+
+        <hr class="divider" />
+        <br>
+
+        <section class="circuito-2">
+            <h2 id="Circito2" class="titulo-circuitos">2º Circuito</h2>
+
+            <span class="transversal">Indique o valor do retificador em ponte (V):</span>
+            <input id="resistencia" class="transversal" type="text">
+
+            <span class="transversal">Indique o valor do filtro capacitivo (F):</span>
+            <input class="input__btn" id="area" type="text">
+
+            <button id="btnCalcula" class="btnCalcula" onclick="CalculaCircuito2();">CALCULAR</button>
+
+            <div class="principal__content-result">
+                <span id="respostaTensao" class="principal__valor-tensao">
+            </div>
         </section>
     </main>
 
     <footer>
-        
+        <p>
+            Desenvolvido por Nome a pensar
+        </p>
     </footer>
 </body>
 
