feat: Adicionando mais circuitos

--- a/sistemasDigitais.html
+++ b/sistemasDigitais.html
@@ -19,8 +19,48 @@
     <main>
         <section class="circuito-1">
             <div class="desenhoCircuito">
-                <button class="entradaBotao" id="testeLogica" onclick="BotaoBoleano()">0</button>
-                <canvas width="600" height="100"></canvas>
+                <button class="entradaBotao" id="botaoCircuito1" onclick="BotaoBoleanoCircuito1()">0</button>
+                <canvas id="canvasCircuito1" width="600" height="100"></canvas>
+            </div>
+        </section>
+        <section class="circuito-2">
+            <div class="desenhoCircuito">
+                <div>
+                    <button class="entradaBotao" id="botao1Circuito2" onclick="Botao1BoleanoCircuito2()">0</button>
+                    <br>
+                    <button class="entradaBotao" id="botao2Circuito2" onclick="Botao2BoleanoCircuito2()">0</button>
+                </div>
+                <canvas class="canvas" id="canvasCircuito2" width="600" height="150"></canvas>
+            </div>
+        </section>
+        <section class="circuito-3">
+            <div class="desenhoCircuito">
+                <div>
+                    <button class="entradaBotao" id="botao1Circuito3" onclick="Botao1BoleanoCircuito3()">0</button>
+                    <br>
+                    <button class="entradaBotao" id="botao2Circuito3" onclick="Botao2BoleanoCircuito3()">0</button>
+                </div>
+                <canvas class="canvas" id="canvasCircuito3" width="600" height="150"></canvas>
+            </div>
+        </section>
+        <section class="circuito-4">
+            <div class="desenhoCircuito">
+                <div>
+                    <button class="entradaBotao" id="botao1Circuito4" onclick="Botao1BoleanoCircuito4()">0</button>
+                    <br>
+                    <button class="entradaBotao" id="botao2Circuito4" onclick="Botao2BoleanoCircuito4()">0</button>
+                </div>
+                <canvas class="canvas" id="canvasCircuito4" width="600" height="150"></canvas>
+            </div>
+        </section>
+        <section class="circuito-5">
+            <div class="desenhoCircuito">
+                <div>
+                    <button class="entradaBotao" id="botao1Circuito5" onclick="Botao1BoleanoCircuito5()">0</button>
+                    <br>
+                    <button class="entradaBotao" id="botao2Circuito5" onclick="Botao2BoleanoCircuito5()">0</button>
+                </div>
+                <canvas class="canvas" id="canvasCircuito5" width="600" height="150"></canvas>
             </div>
         </section>
     </main>
