feat: Finalizando todos os circuitos de Sistemas Digitais

--- a/eletronicaIndustrial.html
+++ b/eletronicaIndustrial.html
@@ -80,9 +80,11 @@
 
             <span class="transversal">Selecione o tipo do retificador utilizado:</span>
             <div class="checkbox">
-                <input id="tipoRetificador1" type="radio" name="Retificador" value="meia-onda">Retificador de meia onda
+                <input class="tiposRetificadores" id="tipoRetificador1" type="radio" name="Retificador" value="meia-onda">Retificador de meia onda
                 <br>
-                <input id="tipoRetificador2" type="radio" name="Retificador" value="onda-completa">Retificador de onda completa
+                <input class="tiposRetificadores" id="tipoRetificador2" type="radio" name="Retificador" value="onda-completa">Retificador de onda completa
+                <br>
+                <input class="tiposRetificadores" id="tipoRetificador3" type="radio" name="Retificador" value="onda-completa-center-tape">Retificador de onda completa com Center Tape
             </div>
 
             <span class="transversal">Indique o valor do transformador N1:</span>
