--- a/sistemasDigitais.html
+++ b/sistemasDigitais.html
@@ -17,6 +17,9 @@
     </header>
 
     <main>
+        <div class="divBotao">
+            <button class="botaoCriaCircuitos" onclick="CriaTodosCircuitos()">Iniciar Circuitos</button>
+        </div>
         <section class="circuito-1">
             <div class="desenhoCircuito">
                 <button class="entradaBotao" id="botaoCircuito1" onclick="BotaoBoleanoCircuito1()">0</button>
@@ -63,6 +66,27 @@
                 <canvas class="canvas" id="canvasCircuito5" width="600" height="150"></canvas>
             </div>
         </section>
+        <section class="circuito-6">
+            <div class="desenhoCircuito">
+                <div>
+                    <button class="entradaBotao" id="botao1Circuito6" onclick="Botao1BoleanoCircuito6()">0</button>
+                    <br>
+                    <button class="entradaBotao" id="botao2Circuito6" onclick="Botao2BoleanoCircuito6()">0</button>
+                </div>
+                <canvas class="canvas" id="canvasCircuito6" width="600" height="150"></canvas>
+            </div>
+        </section>
+        <section class="circuito-7">
+            <div class="desenhoCircuito">
+                <div>
+                    <button class="entradaBotao" id="botao1Circuito7" onclick="Botao1BoleanoCircuito7()">0</button>
+                    <br>
+                    <button class="entradaBotao" id="botao2Circuito7" onclick="Botao2BoleanoCircuito7()">0</button>
+                </div>
+                <canvas class="canvas" id="canvasCircuito7" width="600" height="150"></canvas>
+            </div>
+        </section>
+        <br>
     </main>
 
     <footer>
