feat: terminando os dois circuitos de Eletronica Industrial

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <br>
         <p>
-            Objetivo do projeto!!
+            O nosso projeto tem como função realizar os cálculos dos circuitos solicitados, para facilitar a utilização do usuário separamos em Eletrônica Industrial e Sistemas Digitais, cada um com as devidas especificações.
         </p>
         <br>
         <p>
